--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "format": "cpp",
         "forward_list": "cpp",
         "optional": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "regex": "cpp"
     }
 }
