--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,10 @@
         "optional": "cpp",
         "unordered_set": "cpp",
         "regex": "cpp"
-    }
+    },
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "sameLine",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.lambda": "sameLine",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.namespace": "sameLine",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine"
 }
