--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ if(WIN32)
     list(APPEND SOURCES src/aww-common-windows.cpp)
 elseif(APPLE)
     list(APPEND SOURCES src/aww-common-apple.cpp)
-elseif(UNIX)
-    list(APPEND SOURCES src/aww-common-unix.cpp)
+elseif(__linux__)
+    list(APPEND SOURCES src/aww-common-linux.cpp)
 else()
     list(APPEND SOURCES src/aww-common-unknown.cpp)
 endif()
