--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ if(WIN32)
     list(APPEND SOURCES src/aww-common-windows.cpp)
 elseif(APPLE)
     list(APPEND SOURCES src/aww-common-apple.cpp)
-elseif(__linux__)
+elseif(UNIX)
     list(APPEND SOURCES src/aww-common-linux.cpp)
 else()
     list(APPEND SOURCES src/aww-common-unknown.cpp)
