--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,12 +104,19 @@ target_link_libraries(aww-date PRIVATE ${LIBRARY_NAME})  # Link the executable t
 target_set_warnings(aww-date ENABLE ALL AS_ERROR ALL DISABLE Annoying) # Set warnings (if needed).
 target_enable_lto(aww-date optimized)  # enable link-time-optimization if available for non-debug configurations
 
+## Aww run
+add_executable(aww-run app/aww-run.cpp)   # Name of exec. and location of file.
+target_link_libraries(aww-run PRIVATE ${LIBRARY_NAME})  # Link the executable to library (if it uses it).
+target_set_warnings(aww-run ENABLE ALL AS_ERROR ALL DISABLE Annoying) # Set warnings (if needed).
+target_enable_lto(aww-run optimized)  # enable link-time-optimization if available for non-debug configurations
+
 # Set the properties you require, e.g. what C++ standard to use. Here applied to library and aww (change as needed).
 set_target_properties(
     ${LIBRARY_NAME}
         aww
         aww-git-open
         aww-date
+        aww-run
       PROPERTIES
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED YES
