--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,22 +75,25 @@ target_include_directories(${LIBRARY_NAME} PUBLIC
 # we add the sub-directories that we want CMake to scan
 add_subdirectory(
     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/clip-1.5
-    ${CMAKE_CURRENT_SOURCE_DIR}/third-party/wintoast-5e441fd03543b999edb663caf8df7be37c0d575c
+)
+
+# we add the sub-directories that we want CMake to scan
+add_subdirectory(
+     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/wintoast-5e441fd03543b999edb663caf8df7be37c0d575c
 )
 
 
 # There's also (probably) doctests within the library, so we need to see this as well.
-set(LINK_LIBS
+target_link_libraries(
     ${LIBRARY_NAME} PUBLIC
     doctest
     clip
 )
 
 if(WIN32)
-#!!! TODO: FIX build configuration    list(APPEND LINK_LIBS wintoastlib)
+    target_link_libraries(wintoastlib)
 endif()
 
-target_link_libraries(${LINK_LIBS})
 
 # Set the compile options you want (change as needed).
 target_set_warnings(${LIBRARY_NAME} ENABLE ALL AS_ERROR ALL DISABLE Annoying)
