--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,10 +73,8 @@ target_include_directories(${LIBRARY_NAME} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/webview-dbc7864/src
 )
 # we add the sub-directories that we want CMake to scan
-add_subdirectory(
-    ${CMAKE_CURRENT_SOURCE_DIR}/third-party/clip-1.5
-    ${CMAKE_CURRENT_BINARY_DIR}/third-party/webview-dbc7864
-)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third-party/clip-1.5)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third-party/webview-dbc7864)
 
 # There's also (probably) doctests within the library, so we need to see this as well.
 target_link_libraries(
