--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,7 @@ on:
   pull_request:
 
 jobs:
-  build-prepare-linux:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential libgtk-3-dev libwebkit2gtk-4.0-dev xvfb
-
   build-and-test:
-    needs: build-prepare-linux
     name: ${{ matrix.toolchain }}
     runs-on: ${{ matrix.os }}
 
@@ -40,6 +33,10 @@ jobs:
             compiler: msvc
 
     steps:
+    - name: Install dependencies UBUNTU
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt-get update && sudo apt-get install -y build-essential libgtk-3-dev libwebkit2gtk-4.0-dev xvfb
+
     - name: Checkout Code
       uses: actions/checkout@v2
 
