webview.h mark include dir as SYSTEM -- disable warnings for clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,10 @@ add_library(${LIBRARY_NAME} OBJECT ${SOURCES})
 target_include_directories(${LIBRARY_NAME} PUBLIC
     ${PROJECT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/clip-1.5
+)
+
+# mark webview.h as system header to suppress clang warnings
+target_include_directories(${LIBRARY_NAME} SYSTEM
     ${CMAKE_CURRENT_SOURCE_DIR}/third-party/webview-dbc7864/src
 )
 # we add the sub-directories that we want CMake to scan
