--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,12 @@ target_set_warnings(aww-toast ENABLE ALL AS_ERROR ALL DISABLE Annoying) # Set wa
 target_enable_lto(aww-toast optimized)  # enable link-time-optimization if available for non-debug configurations
 
 ## Aww app
-add_executable(aww-app app/aww-app.cpp)   # Name of exec. and location of file.
+if(WIN32)
+    add_executable(aww-app WIN32 app/aww-app.cpp)   # Name of exec. and location of file.
+else()
+    add_executable(aww-app app/aww-app.cpp)   # Name of exec. and location of file.
+endif()
+
 target_link_libraries(aww-app PRIVATE ${LIBRARY_NAME})  # Link the executable to library (if it uses it).
 target_set_warnings(aww-app ENABLE ALL AS_ERROR ALL DISABLE Annoying) # Set warnings (if needed).
 target_enable_lto(aww-app optimized)  # enable link-time-optimization if available for non-debug configurations
