--- a/.editorconfig
+++ b/.editorconfig
@@ -7,10 +7,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
 
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
 
 [*.{c,h,cpp,hpp}]
 indent_size = 2
