--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ set(TESTFILES        # All .cpp files in tests/
     aww.cpp
     test-aww-common--aww-date.cpp
     test-aww-common--aww-Result.cpp
+    test-aww-tag.cpp
 )
 
 set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
