--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.14)
 # List all files containing tests. (Change as needed)
 set(TESTFILES        # All .cpp files in tests/
     aww.cpp
+    test-aww-common-aww-string.cpp
     test-aww-common--aww-date.cpp
     test-aww-common--aww-Result.cpp
     test-aww-tag.cpp
