move aww-open to lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(SOURCES          # All .cpp files in src/
     src/internal/aww-create.cpp
     src/internal/aww-git-open.cpp
     src/internal/aww-guid.cpp
+    src/internal/aww-open.cpp
 )
 if(WIN32)
     list(APPEND SOURCES src/aww-common-windows.cpp)
