--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set(SOURCES          # All .cpp files in src/
     src/internal/aww-git-open.cpp
     src/internal/aww-guid.cpp
     src/internal/aww-open.cpp
+    src/internal/aww-run.cpp
 )
 if(WIN32)
     list(APPEND SOURCES src/aww-common-windows.cpp)
