implement new crashy toast awwExecutablePath: D:\\my-github\\awwtools\\cmake-build\\bin\\aww.exe awwExecutableDir: D:\\my-github\\awwtools\\cmake-build\\bin No aww executable found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,12 +56,12 @@ set(SOURCES          # All .cpp files in src/
 if(WIN32)
     list(APPEND SOURCES
         src/aww-common-windows.cpp
-        src/aww-toast-popup-windows.cpp
+        src/aww-banner-windows.cpp
     )
 elseif(UNIX)
     list(APPEND SOURCES
         src/aww-common-linux.cpp
-        src/aww-toast-popup-linux.cpp
+        src/aww-banner-linux.cpp
     )
 else()
     list(APPEND SOURCES src/aww-common-unknown.cpp)
