--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TESTFILES        # All .cpp files in tests/
     test-aww-common--aww-date.cpp
     test-aww-common--aww-Result.cpp
     test-aww-tag.cpp
+    test-aww-date.cpp
 )
 
 set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
