--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,13 @@
         "codecvt": "cpp",
         "condition_variable": "cpp",
         "coroutine": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "complex": "cpp",
+        "future": "cpp",
+        "random": "cpp",
+        "shared_mutex": "cpp",
+        "stack": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     }
 }
