--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,5 +91,6 @@
         "stack": "cpp",
         "typeindex": "cpp",
         "variant": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
