--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TESTFILES        # All .cpp files in tests/
     test-aww-tag.cpp
     test-aww-date.cpp
     test-aww-create.cpp
+    test-aww-git-open.cpp
 )
 
 set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
