--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TESTFILES        # All .cpp files in tests/
     test-aww-date.cpp
     test-aww-create.cpp
     test-aww-git-open.cpp
+    test-aww-guid.cpp
 )
 
 set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
