--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ set(TESTFILES        # All .cpp files in tests/
     test-aww-create.cpp
     test-aww-git-open.cpp
     test-aww-guid.cpp
+    test-aww-open.cpp
 )
 
 set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
