--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,19 @@
 {
     "files.associations": {
-        "xloctime": "cpp",
+        "xstring": "cpp",
         "algorithm": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
         "cctype": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "condition_variable": "cpp",
         "csignal": "cpp",
+        "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
@@ -20,6 +22,9 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "exception": "cpp",
+        "filesystem": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
         "fstream": "cpp",
         "functional": "cpp",
         "initializer_list": "cpp",
@@ -36,9 +41,10 @@
         "memory": "cpp",
         "mutex": "cpp",
         "new": "cpp",
+        "optional": "cpp",
         "ostream": "cpp",
-        "random": "cpp",
         "ratio": "cpp",
+        "regex": "cpp",
         "set": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
@@ -51,6 +57,7 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "utility": "cpp",
         "vector": "cpp",
         "xfacet": "cpp",
@@ -62,46 +69,28 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xlocnum": "cpp",
+        "xloctime": "cpp",
         "xmemory": "cpp",
         "xstddef": "cpp",
-        "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "filesystem": "cpp",
-        "format": "cpp",
-        "forward_list": "cpp",
-        "optional": "cpp",
-        "unordered_set": "cpp",
-        "regex": "cpp",
-        "shared_mutex": "cpp",
-        "future": "cpp",
-        "any": "cpp",
-        "codecvt": "cpp",
-        "cstdarg": "cpp",
         "deque": "cpp",
-        "coroutine": "cpp",
-        "resumable": "cpp",
-        "numeric": "cpp",
         "ranges": "cpp",
         "span": "cpp",
         "valarray": "cpp",
-        "variant": "cpp",
-        "hash_map": "cpp",
-        "*.tcc": "cpp",
-        "bitset": "cpp",
-        "cwctype": "cpp",
-        "memory_resource": "cpp",
-        "string_view": "cpp",
-        "numbers": "cpp",
-        "semaphore": "cpp",
-        "cinttypes": "cpp"
+        "any": "cpp",
+        "codecvt": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "numeric": "cpp",
+        "complex": "cpp",
+        "future": "cpp",
+        "random": "cpp",
+        "shared_mutex": "cpp",
+        "stack": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     },
-    "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
-    "C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "sameLine",
-    "C_Cpp.vcFormat.newLine.beforeOpenBrace.lambda": "sameLine",
-    "C_Cpp.vcFormat.newLine.beforeOpenBrace.namespace": "sameLine",
-    "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine"
+    "cmake.configureOnOpen": true
 }
