--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,12 @@ target_link_libraries(${TEST_MAIN} PRIVATE ${LIBRARY_NAME} doctest)
 set_target_properties(${TEST_MAIN} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 target_set_warnings(${TEST_MAIN} ENABLE ALL AS_ERROR ALL DISABLE Annoying) # Set warnings (if needed).
 
+if(MSVC)
+    target_compile_options(${TEST_MAIN} PRIVATE /wd4100)
+else()
+    target_compile_options(${TEST_MAIN} PRIVATE -Wno-unused-parameter)
+endif()
+
 set_target_properties(${TEST_MAIN} PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED YES
